namespace eShopX.Domain.Aggregates.Products;

public enum Audience
{
    Men,
    Women
}
