@startuml
' Aggregate: Products
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
hide empty members

class ProductTag {
  +ProductId: Guid
  +TagId: Guid
}

class ProductSku <<Entity>> #D5F5E3 {
  +ProductVariantId: Guid
  +SizeId: Guid?
  +Price: Money
  +StockQuantity: int
  ..
  +Update()
  +UpdatePrice()
  +AddStock()
  +DeductStock()
}

class ProductImage <<Entity>> #D5F5E3 {
  +ProductVariantId: Guid
  +Url: string
  +PublicId: string
  +IsPrimary: bool
  +SortOrder: int
}

enum Audience #FEF9E7 {
  Men
  Women
}

class ProductVariant <<Entity>> #D5F5E3 {
  +ProductId: Guid
  +Color: string
  ..
  +AddSku()
  +UpdateColor()
  +RemoveSku()
  +AddImage()
  +RemoveImage()
}

class Product <<AggregateRoot>> #D4E6F1 {
  +Name: string
  +Description: string?
  +Audience: Audience?
  +IsActive: bool
  +CategoryId: Guid
  +CreatedAt: DateTime
  +UpdatedAt: DateTime
  ..
  +AddVariant()
  +AddTag()
  +SyncTags()
  +RemoveVariant()
  +Update()
  +Publish()
  +Unpublish()
  +Delete()
}

class ProductUpdatedEvent <<DomainEvent>> #FDEDEC {
  +ProductId: Guid
}

class ProductCreatedEvent <<DomainEvent>> #FDEDEC {
  +ProductId: Guid
}

class ProductDeletedEvent <<DomainEvent>> #FDEDEC {
  +ProductId: Guid
}

' --- Inheritance ---
ProductSku --|> Entity
ProductImage --|> Entity
ProductVariant --|> Entity
Product --|> AggregateRoot

' --- Composition ---
ProductVariant "1" *-- "many" ProductSku
ProductVariant "1" *-- "many" ProductImage
Product --> Audience
Product "1" *-- "many" ProductVariant
Product "1" *-- "many" ProductTag

' --- Domain Events ---
Product ..> ProductCreatedEvent : raises
Product ..> ProductUpdatedEvent : raises
Product ..> ProductDeletedEvent : raises

@enduml